# django_machine_auth

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  UPGRADING.md  pyproject.toml  pytest.ini  setup.md
.cursor/plans/: implement_machine_auth_package_50542153.plan.md
.github/workflows/: ci.yml
django_machine_auth/: __init__.py  apps.py  exceptions.py  urls.py
django_machine_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_machine_auth/admin/: __init__.py  api_key_admin.py
django_machine_auth/authentication/: __init__.py  api_key_authentication.py
django_machine_auth/decorators/: __init__.py  module_decorator.py
django_machine_auth/middleware/: __init__.py  logging_middleware.py
django_machine_auth/migrations/: 0001_initial.py
django_machine_auth/models/: __init__.py  api_key.py  permission.py  request_log.py
django_machine_auth/permissions/: __init__.py  log_permissions.py  machine_permission.py  management_permissions.py
django_machine_auth/registry/: __init__.py  module_registry.py
docs/: MIGRATIONS.md  OPERATIONS.md  RELEASE_CHECKLIST.md
scripts/: test.sh
tests/: settings.py  test_admin_form.py  test_admin_token_viewset.py  test_auth_integration.py  test_cache_invalidation.py  test_commands.py  test_discovery.py  test_logging_middleware.py  test_management_api_v02.py  test_package_urls.py  test_permission_resolver.py  test_public_api.py  test_registry.py  test_relaxed_action_validation.py  test_request_log_viewset.py  test_utils.py  test_validation.py  urls.py  urls_admin_tokens.py  urls_machine.py  urls_machine_relaxed.py  urls_package_include.py  views_machine.py  views_machine_relaxed.py
(+24 files in other folders)
